{
    "name": "GameInput",
    "maps": [
        {
            "name": "KeyboardAction",
            "id": "f3fb59d3-4600-46b3-bed7-acc45518a895",
            "actions": [
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "30ce5c8c-2292-4cea-a8b7-0efaff4d79b8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "e80421bd-fd99-4f90-b421-b1f3058a94a5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "32636188-cf4e-4ea3-808f-a0a0446be671",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "c38c47e2-76b5-4467-b754-a22fb92cda75",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "81585ec7-aef9-445f-87b5-8b7145795773",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0b0934c-df12-4378-b007-0fe7acde2893",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b1f8ce0d-7714-4bc5-baac-d385d5eadd2f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0065ee64-1865-4949-8ae7-32a07f026201",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8bded38-e1d7-4c18-967d-35eb4a3b2adb",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "169efd63-eaeb-46d4-a622-812ea69e6217",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8871ef83-9fa6-4754-8d59-9fb0d89a773e",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c280f8e5-a6ec-4f0b-b4c6-d804a23f1040",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b08a3c51-c6b0-4541-ab9c-e1da74a5fe61",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SwipeAction",
            "id": "cc574b76-3888-4a04-a80e-91151b02f567",
            "actions": [
                {
                    "name": "MoveWithTouchScreen",
                    "type": "Value",
                    "id": "54a17148-1281-487a-87c7-d70c5fa0c16d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveWithMouse",
                    "type": "Value",
                    "id": "18f0a2a4-bfcd-4f24-9896-aab706ec4f47",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "MouseDrag",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f597afe3-9d56-4e9d-9415-3d03089f359f",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveWithTouchScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Mouse Drag",
                    "id": "1e7159f7-a513-48e0-b1ba-0b64cd3f55d8",
                    "path": "MouseDrag",
                    "interactions": "MouseDrag",
                    "processors": "",
                    "groups": "",
                    "action": "MoveWithMouse",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Button",
                    "id": "81cbf107-68a0-4c9f-85a1-a29395b275d1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveWithMouse",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Axis1",
                    "id": "ac544690-906a-4de9-990d-a9c0b9eb4bc3",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveWithMouse",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Axis2",
                    "id": "b35fba8a-f238-4607-b80a-e25e2e2a92b8",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveWithMouse",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}